# clodu-storage

./: .gitignore  Makefile  README.md  database.txt  docker-compose.yaml  obsidian_like_graph.html  pyproject.toml  test.html  проект.md
backend/: Dockerfile  Makefile
backend/Clodu.API/: Clodu.API.csproj  Clodu.API.http  Dockerfile  Program.cs  appsettings.json
backend/analysis/: app.py
backend/applications/: main_auth.py  main_storage.py
backend/auth/: Cargo.toml  Dockerfile  Makefile  app.py  auth.db
backend/auth/src/: error.rs  main.rs
backend/auth/src/db/: mod.rs  users.rs
backend/auth/src/handlers/: login.rs  me.rs  mod.rs  register.rs
backend/auth/src/models/: claims.rs  mod.rs  user.rs
backend/encrypt/: app.py
backend/routers/: main_encryption.py  main_storage.py  storage.py
backend/schemas/: __init__.py
backend/storage/: Dockerfile  app.py  requirements.txt
frontend/: .env.example  API_SETUP.md  Dockerfile  Dockerfile-ui  README.md  app.py  index.html  makefile  metadata.json  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/applications/: main_graph_test.py
frontend/pages/: analysis_page.py  test_page.py
frontend/routers/: main_data_analysis.py
frontend/schemas/: Schemas.py
frontend/services/: base2.py  main_page.py
frontend/src/: App.vue  index.css  main.js  router.js
frontend/ui/: app.py
frontend/utils/: db.py  exceptions.py  logger.py  login.py
gateway/: .env  app.py  requirements.txt
gateway/app/: dependencies.py  main.py
gateway/schemas/: storage.py
(+126 files in other folders)
