[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9.0"
chrono = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rand_core = { version = "0.6", features = ["getrandom"] }